--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -214,6 +214,9 @@
             .view-query {
                 display: inline-block;
             }
+            .count{
+                display: none;
+            }
         }
         .title {
             padding: 0 5px 0 16px;
