FLY-3367 UI changes

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -242,7 +242,7 @@
         <div class="modal-body">
           <div *ngIf="selectedSourceType" class="crerateWebCrawl" [ngClass]="{'pr-0': resourceIDToOpen}">
             <div class="crawl-form-title" *ngIf="!resourceIDToOpen"></div>
-            <div class="kr-sg-input-text mb-4">
+            <div class="kr-sg-input-text mb-4" *ngIf="selectedSourceType.resourceType !== 'file'">
               <div class="label-text">Source Title</div>
               <input type="url" autocomplete="off" maxlength="60" id="addSourceTitleInput" name="sourceTitle"
                 placeholder="Enter Title" [(ngModel)]="newSourceObj.name" (change)="inputChanged('title')"
@@ -295,8 +295,11 @@
                     <div class="data">You can upload either JSON or CSV file here</div>
                   </div>
                   <div class="kr-sg-input-text-area mb-4">
+                    <div class="note-info" *ngIf="selectedSourceType.resourceType === 'file'">
+                      <img src="assets/images/warning.svg"><b>Note:</b> Source titles are derived from uploaded files.
+                    </div>
                     <div class="kr-sg-file-drag-drop">
-                      <div class="drag-drop-sec">
+                      <div class="drag-drop-sec" [ngClass]="{'after-selection-items':(fileObj.fileName && selectedSourceType.sourceType=='content')}">
                         <ng-container *ngIf="!fileObj.fileName">
                           <input type="file" id="sourceFileUploader" class="custom-file-input "
                             (change)="fileChangeListener($event)" aria-describedby="inputGroupFileAddon01"
@@ -320,11 +323,13 @@
                           </div>
                           <label for="sourceFileUploader" class="drag-label adjust_z_index">
                             <span class="browse">Browse File</span>
-                          </label><br />
+                          </label>
+                          <br/>
                           <div class="info_help_text"
                             *ngIf="(selectedSourceType.sourceType=='content'&&selectedSourceType.resourceType =='file')">
                             <img src="assets/icons/info.svg"> Supports: pdf, docx, ppt, xlsx, txt file types
                           </div>
+                          <div class="not-limit-size">Note: Maximum upload limit is 10 files not exceeding 15 MB per file.</div>
                         </ng-container>
 
                         <ng-container *ngIf="fileObj.fileName && selectedSourceType.sourceType=='faq'">
@@ -336,13 +341,13 @@
                                   <img *ngIf="fileObj.file_ext === 'pdf'" class="type_img"
                                     src="assets/icons/file_type_image.svg">
                                   <img *ngIf="fileObj.file_ext === 'docx'" class="type_img"
-                                    src="assets/icons/doc_logo.png">
+                                    src="assets/icons/doc_logo.svg">
                                   <img *ngIf="fileObj.file_ext === 'txt'" class="type_img"
-                                    src="assets/icons/txt_icon.png">
+                                    src="assets/icons/txt_icon.svg">
                                   <img *ngIf="fileObj.file_ext === 'xlsx'" class="type_img"
                                     src="assets/icons/excel_logo.svg">
                                   <img *ngIf="fileObj.file_ext === 'ppt'" class="type_img"
-                                    src="assets/icons/ppt_logo.png">
+                                    src="assets/icons/ppt_logo.svg">
                                   <div class="file-name" [innerHTML]="fileObj.fileName"></div>
                                 </div>
                                 <img src="assets/images/close.svg" class="close-file adjust_z_index"
@@ -355,45 +360,54 @@
                                   src="assets/icons/info.svg">
                               </div>
                             </div>
-                            <div class="error-text" *ngIf="fileObj.fileUploadError && !fileObj.fileUploadInProgress">
-                              Error in
-                              uploading file</div>
+                            <div class="error-text" *ngIf="fileObj.fileUploadError && !fileObj.fileUploadInProgress">Error in uploading file</div>
                           </div>
                         </ng-container>
                         <ng-container *ngIf="fileObj.fileName && selectedSourceType.sourceType=='content'">
+                          <div class="upload-files-radio-data">
+                            <div class="title">Uploaded files</div>
+                            <div class="sort-by-data">
+                              <div class="sort-by-title">Sort By:</div>
+                              <div class="kr-sg-radiobutton">
+                                <input id="radio-1" name="radio" class="radio-custom" type="radio" checked>
+                                <label for="radio-1" class="radio-custom-label">Alphabetical</label>
+                              </div> 
+                              <div class="kr-sg-radiobutton pr-0">
+                                <input id="radio-2" name="radio" class="radio-custom" type="radio">
+                                <label for="radio-2" class="radio-custom-label">Type</label>
+                              </div> 
+                            </div>
+                          </div>
                           <div class="kr-sg-file-drag-drop w-100">
-                            <div class="uploaded-file-name" *ngFor="let file of filesListData"
-                              [ngClass]="{'error':(fileObj.fileUploadError && !fileObj.fileUploadInProgress)}">
+                            <div class="uploaded-file-name" *ngFor="let file of filesListData" [ngClass]="{'error':(fileObj.fileUploadError && !fileObj.fileUploadInProgress)}">
                               <div class="file-close-text">
-                                <div class="d-flex align-items-center">
-                                  <img *ngIf="fileObj.file_ext === 'pdf'" class="type_img"
-                                    src="assets/icons/file_type_image.svg">
-                                  <img *ngIf="fileObj.file_ext === 'docx'" class="type_img"
-                                    src="assets/icons/doc_logo.png">
-                                  <img *ngIf="fileObj.file_ext === 'txt'" class="type_img"
-                                    src="assets/icons/txt_icon.png">
-                                  <img *ngIf="fileObj.file_ext === 'xlsx'" class="type_img"
-                                    src="assets/icons/excel_logo.svg">
-                                  <img *ngIf="fileObj.file_ext === 'ppt'" class="type_img"
-                                    src="assets/icons/ppt_logo.png">
-                                  <div class="file-name" [innerHTML]="file.name"></div>
+                                <div class="d-flex align-items-center img-block-data">
+                                  <img *ngIf="fileObj.file_ext === 'pdf'" class="type_img" src="assets/icons/file_type_image.svg">
+                                  <img *ngIf="fileObj.file_ext === 'docx'" class="type_img" src="assets/icons/doc_logo.svg">
+                                  <img *ngIf="fileObj.file_ext === 'txt'" class="type_img" src="assets/icons/txt_icon.svg">
+                                  <img *ngIf="fileObj.file_ext === 'xlsx'" class="type_img" src="assets/icons/excel_logo.svg">
+                                  <img *ngIf="fileObj.file_ext === 'ppt'" class="type_img" src="assets/icons/ppt_logo.svg">
                                 </div>
-                                <img src="assets/images/close.svg" class="close-file adjust_z_index"
-                                  (click)="removeFile()">
+                                <div class="text-content">
+                                  <div class="file-name" [innerHTML]="file.name"></div>
+                                  <div class="progress-bar-data"></div>
+                                </div>
+                                <img src="assets/images/close.svg" class="close-file adjust_z_index" (click)="removeFile()">
                               </div>
-                              <div class="progress-status">
+                              <!-- <div class="progress-status">
                                 <img *ngIf="fileObj.fileUploadInProgress" class="progSpinner"
                                   src="assets/icons/spinner.svg">
                                 <img *ngIf="fileObj.fileUploadError && !fileObj.fileUploadInProgress"
                                   src="assets/icons/info.svg">
-                              </div>
+                              </div> -->
                             </div>
-                            <div class="error-text" *ngIf="fileObj.fileUploadError && !fileObj.fileUploadInProgress">
-                              Error in
-                              uploading file</div>
+                            <div class="error-text" *ngIf="fileObj.fileUploadError && !fileObj.fileUploadInProgress">Error in uploading file</div>
                           </div>
                         </ng-container>
-
+                        <div class="drag-drop-text-info" *ngIf="fileObj.fileName && selectedSourceType.sourceType=='content'">
+                          <div class="main-text">Drag and drop file anywhere on this screen</div>
+                          <div class="secondary-text">Note: Maximum upload limit is 10 files not exceeding 15 MB per file.</div>
+                        </div>
                       </div>
                     </div>
                     <!-- Annotation Start Here -->
