--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -434,6 +434,28 @@
         }
     }
 }
+.note-info{
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 14px;
+    color: #202124;
+    margin: 30px 0;
+    b{
+        font-weight: 700;
+        padding: 0 10px 0 4px;
+    }
+    img{
+        position: relative;
+        top: -1px;
+    }
+}
+.not-limit-size{
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    color: #9AA0A6;
+    margin: 30px 0;
+}
 .kr-sg-file-drag-drop{
     .drag-drop-sec{
         border: 1px dashed #BDC1C6;
@@ -1463,8 +1485,96 @@
         margin-top: 20px;
         .kr-sg-file-drag-drop{
             .drag-drop-sec{
-                padding: 43px 60px;
+                padding: 40px 60px;
                 margin-bottom: 15px;
+                // min-height:468px;
+                min-height:250px;
+                &.after-selection-items{
+                    padding: 30px 15px;
+                    display: block;
+                    .kr-sg-file-drag-drop{
+                        display: flex;
+                        flex-wrap: wrap;
+                        .uploaded-file-name{
+                            background:transparent;
+                            padding:5px 15px;
+                            width:300px;
+                            margin:0px;
+                            .file-close-text{
+                                background: #F8F9FA;
+                                border-radius:4px;
+                                padding:13px;
+                                height:65px;
+                                .text-content{
+                                    width: 190px;
+                                    padding-right: 12px;
+                                    .file-name{
+                                        overflow: hidden;
+                                        text-overflow: ellipsis;
+                                        white-space: nowrap;
+                                        font-weight: normal;
+                                        font-size: 14px;
+                                        line-height: 17px;
+                                        padding: 0;
+                                        color: #3C4043;
+                                    }
+                                    .progress-bar-data{
+                                        // margin-top: 8px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .upload-files-radio-data{
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        padding: 0 15px;
+                        margin-bottom: 12px;
+                        .title{
+                            font-weight: 600;
+                            font-size: 14px;
+                            line-height: 17px;
+                            color: #3C4043;
+                        }
+                        .sort-by-data{
+                            display: flex;
+                            align-items: center;
+                            justify-content: flex-end;
+                            .sort-by-title{
+                                font-weight: normal;
+                                font-size: 12px;
+                                line-height: 15px;
+                                color: #3C4043;
+                                padding-right: 15px;
+                            }
+                            .kr-sg-radiobutton{
+                                &.pr-0{
+                                    padding-right: 0 !important;
+                                }
+                            }
+                        }
+                    }
+                    .drag-drop-text-info{
+                        // position: absolute;
+                        // bottom: 20px;
+                        margin: 20px 0 0 0;
+                        width: 100%;
+                        .main-text{
+                            font-weight: normal;
+                            font-size: 14px;
+                            line-height: 14px;
+                            color: #202124;
+                            margin-bottom: 8px;
+                        }
+                        .secondary-text{
+                            font-weight: 600;
+                            font-size: 12px;
+                            line-height: 15px;
+                            color: #9AA0A6;
+                        }
+                    }
+                }
                 .imageDiv{
                     margin-bottom: 14px;
                 }
